[tool.poetry]
name = "clean-rl"
version = "0.1.0"
description = ""
authors = ["Akin, Nicholas <nicholasakin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10, <3.13"
pettingzoo = {extras = ["atari", "butterfly", "testing"], version = "^1.25.0"}
supersuit = "^3.10.0"
tensorboard = "^2.19.0"
torch = "^2.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
